--- a/episodes/season_11.yml
+++ b/episodes/season_11.yml
@@ -6,7 +6,7 @@ episodes:
   description: Studio executives panic when actor Mel Gibson taps Homer to help him
     retool his latest film.
   simpsonsworld_id: 306906179700
-  good: false
+  good: true
   characters: 
 - title: Brother's Little Helper
   season: 11
@@ -14,7 +14,7 @@ episodes:
   description: Bart is diagnosed with Attention Deficit Disorder and placed on medication
     that quells his disruptive behavior.
   simpsonsworld_id: 302833219678
-  good: false
+  good: maybe
   characters: 
 - title: Guess Who's Coming to Criticize Dinner
   season: 11
@@ -22,7 +22,7 @@ episodes:
   description: Homer becomes the Springfield Shopper's new food critic, but raises
     the ire of restaurateurs by panning their cooking.
   simpsonsworld_id: 306911811691
-  good: false
+  good: maybe
   characters: 
 - title: Treehouse of Horror X
   season: 11
@@ -31,7 +31,7 @@ episodes:
     superheroes and attempt to save Lucy Lawless from a super-villain; someone terrorizes
     the family after Marge kills Ned Flanders.
   simpsonsworld_id: 307851843709
-  good: false
+  good: maybe
   characters: 
 - title: E-I-E-I-(Annoyed Grunt)
   season: 11
@@ -39,7 +39,7 @@ episodes:
   description: The Simpsons relocate to a farm, where Homer produces a tomato that
     is highly addictive.
   simpsonsworld_id: 302847555697
-  good: false
+  good: true
   characters: 
 - title: Hello Gutter, Hello Fadder
   season: 11
@@ -47,14 +47,14 @@ episodes:
   description: Homer becomes an instant celebrity when he bowls a perfect game.  But
     when his fame fades away, he lavishes his time on baby Maggie.
   simpsonsworld_id: 294762563857
-  good: false
+  good: maybe
   characters: 
 - title: Eight Misbehavin'
   season: 11
   episode: 7
   description: Apu is driven to the brink when his wife, Manjula, gives birth to octuplets.
   simpsonsworld_id: 306920003903
-  good: false
+  good: maybe
   characters: 
 - title: Take My Wife, Sleaze
   season: 11
@@ -62,16 +62,16 @@ episodes:
   description: Homer wins a vintage motorcycle during a dance contest - and attracts
     the attention of Hell's Satans when he forms his own gang.
   simpsonsworld_id: 301643843522
-  good: false
+  good: maybe
   characters: 
 - title: Grift of the Magi
   season: 11
   episode: 9
   description: As the Christmas holiday approaches... Springfield Elementary closes
     its doors for financial reasons, only to reopen when a mysterious organization
-    steps in to help. Presented by FXX.
+    steps in to help.
   simpsonsworld_id: 848995395938
-  good: false
+  good: maybe
   characters: 
 - title: Little Big Mom
   season: 11
@@ -79,14 +79,14 @@ episodes:
   description: Lisa becomes mother-of-the-house when Marge is hospitalized with a
     broken leg.
   simpsonsworld_id: 300903491898
-  good: false
+  good: maybe
   characters: 
 - title: Faith Off
   season: 11
   episode: 11
   description: Bart believes he has the power to heal the sick.
   simpsonsworld_id: 300909123775
-  good: false
+  good: maybe
   characters: 
 - title: The Mansion Family
   season: 11
@@ -94,7 +94,7 @@ episodes:
   description: The Simpsons care for Burns' mansion when the billionaire leaves town
     for a medical exam.
   simpsonsworld_id: 279747651734
-  good: false
+  good: maybe
   characters: 
 - title: Saddlesore Galactica
   season: 11
@@ -102,14 +102,14 @@ episodes:
   description: When Homer and Bart transform a loser racehorse into a champion, rival
     jockeys threaten revenge.
   simpsonsworld_id: 306926659533
-  good: false
+  good: maybe
   characters: 
 - title: Alone Again Natura-Diddily
   season: 11
   episode: 14
   description: Homer attempts to help when Flanders experiences a tragic loss.
   simpsonsworld_id: 288077891629
-  good: false
+  good: maybe
   characters: 
 - title: Missionary Impossible
   season: 11
@@ -117,14 +117,14 @@ episodes:
   description: Homer is forced to become a missionary on a remote island after he
     pledges a large sum of money to PBS.
   simpsonsworld_id: 310458435665
-  good: false
+  good: maybe
   characters: 
 - title: Pygmoelian
   season: 11
   episode: 16
   description: Moe undergoes plastic surgery and becomes a hot new soap opera star.
   simpsonsworld_id: 294758467783
-  good: false
+  good: maybe
   characters: 
 - title: Bart to the Future
   season: 11
@@ -133,7 +133,7 @@ episodes:
     a time when Bart is an over-the-hill moocher and Lisa is President of the United
     States.
   simpsonsworld_id: 302835267686
-  good: false
+  good: maybe
   characters: 
 - title: Days of Wine and D'Ohses
   season: 11
@@ -142,7 +142,7 @@ episodes:
     to win a contest, Bart and Lisa attempt to photograph a new cover for the Springfield
     phone book.
   simpsonsworld_id: 306930755636
-  good: false
+  good: maybe
   characters: 
 - title: Kill the Alligator and Run
   season: 11
@@ -150,7 +150,7 @@ episodes:
   description: The Simpsons find themselves on the run from the law after they accidentally
     kill a beloved alligator while vacationing in Florida.
   simpsonsworld_id: 292935747924
-  good: false
+  good: maybe
   characters: 
 - title: Last Tap Dance in Springfield
   season: 11
@@ -159,7 +159,7 @@ episodes:
     tap dance class... only to discover she has two left feet; Bart and Milhouse abandon
     a camping trip and hide out in a shopping mall.
   simpsonsworld_id: 302849091512
-  good: false
+  good: true
   characters: 
 - title: It's a Mad, Mad, Mad, Mad Marge
   season: 11
@@ -167,7 +167,7 @@ episodes:
   description: When Otto ditches his fiancée at the altar, Bart invites her to stay
     with the family... forcing Marge to compete with the much younger woman.
   simpsonsworld_id: 301683779737
-  good: false
+  good: maybe
   characters: 
 - title: Behind the Laughter
   season: 11
@@ -175,5 +175,5 @@ episodes:
   description: This 'behind-the-scenes' special chronicles the ups and downs of America's
     favorite sitcom family.
   simpsonsworld_id: 279751747780
-  good: false
+  good: true
   characters: 
