--- a/episodes/season_12.yml
+++ b/episodes/season_12.yml
@@ -7,7 +7,7 @@ episodes:
     into heaven; angry dolphins launch an attack against the people of Springfield;
     Bart and Lisa encounter characters from fairy tales.
   simpsonsworld_id: 294765123660
-  good: false
+  good: maybe
   characters: 
 - title: A Tale of Two Springfields
   season: 12
@@ -15,7 +15,7 @@ episodes:
   description: The townspeople of Springfield divide into two communities when the
     telephone company institutes a new area code system.
   simpsonsworld_id: 300911171880
-  good: false
+  good: maybe
   characters: 
 - title: Insane Clown Poppy
   season: 12
@@ -23,7 +23,7 @@ episodes:
   description: Krusty discovers that he fathered a child during the Gulf War... only
     to gamble away his daughter's precious violin during a poker game with Fat Tony.
   simpsonsworld_id: 306934851515
-  good: false
+  good: maybe
   characters: 
 - title: Lisa the Treehugger
   season: 12
@@ -31,7 +31,7 @@ episodes:
   description: Lisa joins a group of eco-radicals in her attempt to save the city's
     oldest redwood tree.
   simpsonsworld_id: 306939971530
-  good: false
+  good: maybe
   characters: 
 - title: Homer vs. Dignity
   season: 12
@@ -39,7 +39,7 @@ episodes:
   description: As the Thanksgiving holiday approaches, Mr. Burns hires Homer to be
     his 'prank monkey.'
   simpsonsworld_id: 311670339999
-  good: false
+  good: maybe
   characters: 
 - title: The Computer Wore Menace Shoes
   season: 12
@@ -47,7 +47,7 @@ episodes:
   description: Homer uses his new computer to spread gossip on the Internet... and
     eventually finds himself stranded on a mysterious island.
   simpsonsworld_id: 302843971598
-  good: false
+  good: maybe
   characters: 
 - title: The Great Money Caper
   season: 12
@@ -55,7 +55,7 @@ episodes:
   description: Homer and Bart become scam artists when the family is faced with the
     cost of a sudden car repair.
   simpsonsworld_id: 304456259863
-  good: false
+  good: maybe
   characters: 
 - title: Skinner's Sense of Snow
   season: 12
@@ -64,7 +64,7 @@ episodes:
     fellow students inside Springfield Elementary, where Principal Skinner attempts
     to keep chaos from erupting.
   simpsonsworld_id: 307850819951
-  good: false
+  good: maybe
   characters: 
 - title: HOMR
   season: 12
@@ -72,7 +72,7 @@ episodes:
   description: Homer experiences a dramatic increase in intelligence when researchers
     remove a crayon lodged in his brain.
   simpsonsworld_id: 306945603638
-  good: false
+  good: true
   characters: 
 - title: Pokey Mom
   season: 12
@@ -81,7 +81,7 @@ episodes:
     prison.  But when the ex-con gets a job painting a mural at the elementary school,
     he clashes with Skinner.
   simpsonsworld_id: 302844995961
-  good: false
+  good: maybe
   characters: 
 - title: Worst Episode Ever
   season: 12
@@ -89,7 +89,7 @@ episodes:
   description: When the Comic Book Guy suffers a heart attack, Bart and Milhouse take
     over his store.
   simpsonsworld_id: 310459971509
-  good: false
+  good: maybe
   characters: 
 - title: Tennis the Menace
   season: 12
@@ -97,7 +97,7 @@ episodes:
   description: When the Simpsons construct a tennis court in the backyard, Bart pairs
     up with Marge and becomes a tennis whiz... much to Homer's disappointment.
   simpsonsworld_id: 300916291603
-  good: false
+  good: maybe
   characters: 
 - title: Day of the Jackanapes
   season: 12
@@ -105,7 +105,7 @@ episodes:
   description: Sideshow Bob wins release from prison and hypnotizes Bart to kill Krusty
     the Clown.
   simpsonsworld_id: 307106883649
-  good: false
+  good: maybe
   characters: 
 - title: New Kids on the Blecch
   season: 12
@@ -113,7 +113,7 @@ episodes:
   description: After casting Bart and his friends as singers in an all-boy band, a
     crazed record producer launches an attack on the offices of MAD magazine.
   simpsonsworld_id: 310437443723
-  good: false
+  good: maybe
   characters: 
 - title: Hungry Hungry Homer
   season: 12
@@ -121,7 +121,7 @@ episodes:
   description: Homer goes on a hunger strike after learning that the owner of the
     Springfield Isotopes plans on moving the team to Albuquerque.
   simpsonsworld_id: 307850819931
-  good: false
+  good: maybe
   characters: 
 - title: Bye Bye Nerdy
   season: 12
@@ -129,7 +129,7 @@ episodes:
   description: Lisa searches for answers when a new student at school bullies her;
     Homer starts his own baby-proofing business.
   simpsonsworld_id: 302846019892
-  good: false
+  good: maybe
   characters: 
 - title: Simpson Safari
   season: 12
@@ -137,7 +137,7 @@ episodes:
   description: The Simpsons journey through Africa, where they encounter jungle animals,
     tribesmen... and a chimp refuge owner with a secret.
   simpsonsworld_id: 302845507908
-  good: false
+  good: maybe
   characters: 
 - title: Trilogy of Error
   season: 12
@@ -146,7 +146,7 @@ episodes:
     when Marge slices off his thumb; Lisa attempts to place her entry in the school
     science fair; Bart is pursued by gangsters.'
   simpsonsworld_id: 302842947994
-  good: false
+  good: maybe
   characters: 
 - title: I'm Goin' to Praise Land
   season: 12
@@ -155,7 +155,7 @@ episodes:
     closed amusement park into a new Christian amusement park, 'Praiseland.'  The
     park flops until visitors begin having 'visions.'
   simpsonsworld_id: 302848579632
-  good: false
+  good: maybe
   characters: 
 - title: Children of a Lesser Clod
   season: 12
@@ -164,7 +164,7 @@ episodes:
     successful stint as a babysitter prompts Homer to open a full-time daycare service,
     leaving Bart and Lisa feeling neglected.
   simpsonsworld_id: 301652547508
-  good: false
+  good: maybe
   characters: 
 - title: Simpsons Tall Tales
   season: 12
@@ -172,5 +172,5 @@ episodes:
   description: The Simpsons jump a train, and meet a hobo, who tells them twisted
     versions of three classic tales, all of which feature Simpsons characters.
   simpsonsworld_id: 301685315594
-  good: false
+  good: maybe
   characters: 
